<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="16dp">

<LinearLayout android:id="@+id/linlay"
              android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/monthly_payments_intro"
                android:id="@+id/tv_min_pay_intro_text"/>

        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:layout_marginTop="16dp"
                android:id="@+id/table_min_pay"
                android:shrinkColumns="*"
                android:stretchColumns="*">

            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/textView"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/min_payment"
                        android:id="@+id/textView2"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/estimated_interest"
                        android:id="@+id/textView3"
                        android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView4"
            android:layout_marginTop="16dp"/>
</LinearLayout>
</ScrollView>